2002-12-06  Duncan Mak  <duncan@ximian.com>

	* data/Makefile.am (EXTRA_DIST): Add machine.config
	(DISTCLEANFILES): Add config.

2002-11-30  Daniel Morgan <danmorg@sc.rr.com>

	* man/sqlsharpcli.1: added file - a man page 
	for SQL# CLI
	
	* man/Makefile.am: added sqlsharpcli.1 to man_MANS
	
2002-11-20  Daniel Morgan <danmorg@sc.rr.com>

	* doc/firebird: updated web page

2002-11-19  Mike Kestner <mkestner@speakeasy.net>

	* data/Config.in : added the gtk# dll mapping entries

2002-11-19  Daniel Morgan <danmorg@sc.rr.com>

	* doc/firebird: updated web page based on input
	from the firebird .net data provider author

Mon Nov 18 16:40:34 CET 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in, mono/os/gc_wrapper.h: check that the gc headers have
	been installed.

2002-11-12  Daniel Morgan <danmorg@sc.rr.com>

	* doc/oledb
	* doc/odbc
	* doc/mysql
	* doc/sqlite
	* doc/sqlclient
	* doc/tdsclient
	* doc/sybase
	* doc/firebird: added web pages
	for each specific data provider
	
	* doc/ado-net
	* doc/postgresql: updated web page
	with current status
	
	* doc/web/commands
	* doc/web/makefile: updated to include
	new web pages

2002-11-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* autogen.sh: make it work when MONO_PATH is set and it has more than
	one directory or ends in ":". Also check that the directory added to
	ACLOCAL_FLAGS and PATH exist (aclocal fails if they don't).

2002-10-22  Miguel de Icaza  <miguel@ximian.com>

	* configure.in: Also allow the miss-spelled bohem.

2002-10-18  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net
	* doc/postgresql
	* doc/tds-providers: cleaned up the web pages
	
	* doc/web/commands: postgresql.html page was mistyped

2002-10-18  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: updated status of
	the ADO.NET functionality and providers
	and added link to tds-providers.html

	* doc/tds-providers: added file to
	describe the design	and status of 
	the SqlClient, SybaseClient, and TdsClient
	ADO.NET providers.
